--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ button {
 /* refer to the auto loan pre work app with rounded corners and clean lines */
 
 /* styling for table */
-
+/* 
 table{
     border-collapse: collapse;
     width: 50%;
@@ -73,4 +73,4 @@ table, th, td{
 
 th{ 
     font-size: 15px;
-}
+} */
