--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,8 @@ body {
 }
 .banner {
   display: inline;
-  /* background: linear-gradient(to top, #67a030, #66a03021); */
   padding: 0.5rem;
-  /* border: solid olive 1px; */
-  /* border-bottom-left-radius: .5rem;
-    border-bottom-right-radius: .5rem */
 }
-/* .nav-links {
-    text-decoration: underline;
-    color: #003700; 
-} */
 a {
   display: block;
   float: left;
@@ -26,7 +18,7 @@ a {
   margin-right: 1px;
   color: #fff;
   text-decoration: none;
-  font-size: 14px
+  font-size: 14px;
 }
 #budget-icon {
   display: block;
